<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#a94eef"
    tools:context="com.igormelo.teste.MainActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="20dp"
        android:id="@+id/editText"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/editText2"
        android:layout_marginBottom="62dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="20dp"
        android:id="@+id/editText2"
        android:textAlignment="center"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/button"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#f6bffa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Espresso Teste"
        android:id="@+id/textView"
        android:fontFamily="sans-serif"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="71dp" />

</RelativeLayout>
